# opifex

./: .bashrc  .dockerignore  .env.example  .gitignore  .jupytext.toml  .pre-commit-config.yaml  .readthedocs.yaml  .shellcheckrc  .skyignore  CHANGELOG.md  CNAME  Dockerfile  LICENSE  README.md  RELEASING.md  activate.sh  bandit-report.json  docker-compose.yml  dot_env_template  index.html  mkdocs.yml  pyproject.toml  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmark-regression.yml  build-verification.yml  ci.yml  docs.yml  publish.yml  quality-checks.yml  security.yml  tests-extended.yml
benchmark-data/: pdebench_comparison.json
benchmarks/: run_benchmark.py
config/: default.yaml
deploy/vast/: README.md  launch.py  launch_direct.py  qh9_train.sky.yaml
deployment/: DEPLOYMENT_TESTING_BEST_PRACTICES.md  Makefile  Makefile-sciml-enhancements  QUICK_START_GUIDE.md  README.md  config.yaml  test-deployment.sh  test.mk
deployment/benchmarking/: cluster-role-binding.yaml  cluster-role.yaml  kustomization.yaml  limitrange.yaml  namespace.yaml  resourcequota.yaml  role-benchmark-db-role.yaml  role-benchmark-executor-role.yaml  role-pdebench-manager-role.yaml  role-report-generator-role.yaml  rolebinding-benchmark-db-binding.yaml  rolebinding-benchmark-executor-binding.yaml  rolebinding-pdebench-manager-binding.yaml  rolebinding-report-generator-binding.yaml  serviceaccount-benchmark-db-service-account.yaml  serviceaccount-benchmark-executor-service-account.yaml  serviceaccount-pdebench-service-account.yaml  serviceaccount-report-generator-service-account.yaml
deployment/community/: kustomization.yaml
deployment/mlops/: kustomization.yaml
deployment/scalability/: README.md  kustomization.yaml
deployment/security/: kustomization.yaml
docs/: architecture.md  benchmarks.md  faq.md  features.md  index.md  tech-stack.md
docs/api/: bayesian.md  benchmarking.md  core.md  data.md  deployment.md  discovery.md  education.md  equivariant.md  fields.md  geometry.md  mlops.md  neural.md  optimization.md  physics.md  platform.md  scalability.md  training.md  uncertainty.md  utils.md  visualization.md
docs/deployment/: aws-deployment.md  gcp-deployment.md  local-development.md  troubleshooting.md
docs/development/: architecture.md  code-quality.md  contributing.md  example-documentation-design.md  example_documentation_design.md  gpu-development.md  nequip-symmetric-contraction.md  testing.md
docs/examples/: fluid-dynamics.md  index.md  materials.md  optimization.md  pde-solving.md  quantum-chemistry.md  working-examples.md
docs/getting-started/: environment-setup.md  gpu-setup.md  installation.md  quickstart.md
docs/javascripts/: mathjax.js
docs/methods/: adaptive-sampling.md  advanced-benchmarking.md  atomistic-potentials.md  control-systems.md  domain-decomposition-pinns.md  gradnorm.md  hamiltonian-prediction.md  l2o.md  meta-optimization.md  multilevel-training.md  neural-dft.md  neural-operators.md  ntk-analysis.md  pinns.md  probabilistic.md  production-optimization.md  second-order-optimization.md  variational-monte-carlo.md
docs/stylesheets/: extra.css
docs/tutorials/: advanced-training-tutorial.md  domain-decomposition-tutorial.md  neural-dft.md
docs/user-guide/: concepts.md  geometry.md  neural-networks.md  optimization.md  problems.md  training.md
examples/: README.md  README_comprehensive_profiling.md  __init__.py  comprehensive_profiling_demo.py  darcy_fno_sciml.py  enhanced_calibration_demo.py  neural_operators_comprehensive_demo.py
examples/advanced-training/: adaptive_sampling.ipynb  adaptive_sampling.py  gradnorm.ipynb  gradnorm.py  ntk_analysis.ipynb  ntk_analysis.py
examples/atomistic/: nequip_md17.ipynb  nequip_md17.py
examples/benchmarking/: gpu_profiling.ipynb  gpu_profiling.py  operator_benchmark.ipynb  operator_benchmark.py
examples/comparative_studies/: neural_operator_benchmark.py
examples/data/: darcy_flow_analysis.ipynb  darcy_flow_analysis.py  darcy_flow_spectral_analysis.ipynb  darcy_flow_spectral_analysis.py  pdebench_loading.ipynb  pdebench_loading.py  vtk_mesh_loading.ipynb  vtk_mesh_loading.py
examples/discovery/: sindy_lorenz.ipynb  sindy_lorenz.py
examples/distributed/: distributed_pde.ipynb  distributed_pde.py
examples/domain-decomposition/: cpinn_advection_diffusion.ipynb  cpinn_advection_diffusion.py  fbpinn_poisson.ipynb  fbpinn_poisson.py  xpinn_helmholtz.ipynb  xpinn_helmholtz.py
examples/fields/: field_operations.ipynb  field_operations.py
examples/getting-started/: first_neural_operator.ipynb  first_neural_operator.py  first_pinn.ipynb  first_pinn.py
examples/layers/: __init__.py  disco_convolutions_example.ipynb  disco_convolutions_example.py  fourier_continuation_example.ipynb  fourier_continuation_example.py  grid_embeddings_example.ipynb  grid_embeddings_example.py  spectral_normalization_example.ipynb  spectral_normalization_example.py
examples/models/: fno_darcy_comprehensive.py  sfno_climate_comprehensive.py  sfno_climate_simple.py  ufno_turbulence_comprehensive.py  uno_darcy_framework.py  uno_darcy_sciml.py
examples/neural-operators/: deeponet_antiderivative.ipynb  deeponet_antiderivative.py  deeponet_darcy.ipynb  deeponet_darcy.py  fno_burgers.ipynb  fno_burgers.py  fno_darcy.ipynb  fno_darcy.py  fno_navier_stokes.ipynb  fno_navier_stokes.py  gno_darcy.ipynb  gno_darcy.py  local_fno_darcy.ipynb  local_fno_darcy.py  operator_tour.ipynb  operator_tour.py  pino_burgers.ipynb  pino_burgers.py  sfno_climate_comprehensive.ipynb  (+9 more)
sciml/: 404.html  index.html  objects.inv  sitemap.xml
scripts/: README.md  check_backend.py  check_opifex_compatibility.py  clean_cache.sh  eval_qh9_blocks.py  gpu_test_manager.py  gpu_utils.py  jupytext_converter.py  run_ci_benchmark.py  run_pdebench_comparison.py  run_tests_reliably.sh  run_tests_with_cuda.sh  setup_env.py  train_qh9_blocks.py  verify_jit_compatibility.py  verify_opifex_examples.py  verify_opifex_gpu.py
tests/: conftest.py  test_imports.py
(+1949 files in other folders)
